--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,11 @@
     color: #8C8C8C;
     font-size: 18px;
     line-height: 21px;
+
+    text-overflow: ellipsis;
+    overflow:hidden;
+    white-space: nowrap;
+    max-width: 95%;
 }
 .category{
     text-overflow: ellipsis;
